@@ -1,3 +1,12 @@
+2008-09-16  Kai Tietz  <kai.tietz@onevision.com>
+
+	Patch/2108279 by Jaroslav Smid
+	* lib64/uxtheme.h: New Vista API for BeginBufferedPaint,
+	BufferedPaintClear, BufferedPaintInit, BufferedPaintSetAlpha,
+	BufferedPaintUnInit, EndBufferedPaint, GetBufferedPaintBits,
+	GetBufferedPaintDC, GetBufferedPaintTargetDC, and
+	GetBufferedPaintTargetRect.
+
 2008-09-12  Kai Tietz  <kai.tietz@onevision.com>
 
 	Patch/2106947 by Jaroslav Smid
